# portfolio-lab

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  WORK_STATUS_REPORT.md  crontab  index.html  package.json  pyproject.toml  pytest.ini  tsconfig.json
.claude/: dev-loop.config.md  scheduled_tasks.json
config/: defi_thresholds.yaml  ensemble_weights.json  factor_rotation.yaml  smart_rebalance.yaml  tips_config.yaml
data/: fred_data.json  hmm_regime_model.pkl  ubt_backtest_results.json
research/: bond_momentum_backtest_results.json  bond_momentum_overlay_backtest.json
scripts/: backfill_actual_directions.py  backfill_factor_data.py  cron_update.py  cron_verify.py  factor_correlation_analysis.py  fetch-data.ts  fetch_factor_etfs.py  ingest_yield_curve.py  portfolio-lab-position-sync.sh  run-tests-safe  uv-update-check.sh
src/: App.css  App.tsx  cron_compat.py  experimental.py
tests/: conftest.py  test_alpaca.py  test_alt_data_walkforward_stress.py  test_alternative_data.py  test_alternative_data_backfill.py  test_arp_overlay.py  test_base_agent.py  test_bayesian_vol.py  test_behavioral_sentiment.py  test_bond_duration_rotator.py  test_bond_duration_signal.py  test_bond_momentum.py  test_calendar_seasonality.py  test_car25.py  test_car25.ts  test_circuit_breaker.py  test_closing_auction_executor.py  test_closing_auction_fetcher.py  test_closing_auction_signal.py  test_closing_auction_walkforward.py  test_collar_options_bridge.py  test_collar_overlay.py  test_collar_signal.py  test_combined_orchestrator.py  test_combined_overlay_backtest.py  (+128 more)
(+511 files in other folders)
